--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-spring.redis.host=localhost
-spring.redis.port=6379
-max-size=9
+spring.redis.host=${REDIS_HOST}
+spring.redis.port=${REDIS_PORT}
+max-size=${MAX_SIZE_PER_USER}
